Modificado poucas coisas no index.html e style.css Corrige redirecionamento do botão "Monte seu Mix!"

--- a/NATURALBLU/index.html
+++ b/NATURALBLU/index.html
@@ -21,7 +21,7 @@
                     <span><i class="fas fa-phone"></i> Bem-vindo à sua loja de produtos naturais!</span>
                 </div>
                 <div class="auth-buttons">
-                    <a href=""><i class="fas fa-user"></i> Login</a>
+                    <a href=""><i class="fas fa-user"></i>Login</a>
                     <a href="#register"><i class="fas fa-user-plus"></i> Cadastre-se</a>
                 </div>
             </div>
@@ -76,7 +76,7 @@
         <div class="container">
             <h2>Produtos Naturais para uma Vida Saudável</h2>
             <p>Descubra os melhores produtos naturais, orgânicos e sustentáveis para cuidar da sua saúde e bem-estar.</p>
-            <a href="#products" class="btn">Comprar Agora</a>
+            <a href="/pagina.Mix/granola-mix.html" class="btn">Monte seu Mix!</a>
         </div>
     </section>
     
