feat: Implement homepage and mix page functionality
- Added homepage.js to manage cart interactions, including rendering cart items, removing items, and updating total price.
- Created mixpage.js for building custom mixes, including ingredient selection, price calculation, and saving to local storage.
- Developed index.html with a structured layout for the homepage, including product listings and a cart dropdown.
- Introduced mix.html for creating personalized mixes with ingredient options and a summary display.
- Enhanced user experience with alerts and smooth scrolling for better navigation.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NaturalBlu - Sua Loja de Produtos Naturais</title>
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/homepage.css">
 </head>
 
 <body>
@@ -277,6 +277,6 @@
         <img src="download.png" alt="" width="60px">
     </a>
 
-    <script src="homepage-scripts.js"></script>
+    <script src="js/homepage.js"></script>
 </body>
 </html>
