--- a/mix.html
+++ b/mix.html
@@ -6,7 +6,7 @@
     <title>Monte Seu Mix de Premium</title>
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/mixpage.css">
 
 </head>
 <body>
@@ -111,7 +111,7 @@
         </div>
     </div>
     
-    <script src="scripts.js"></script>
+    <script src="js/mixpage.js"></script>
 
 </body>
 </html>
