Refactor code structure for improved readability and maintainability

--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box">
         <div class="img-box">
-            <img src="imagens/logo.png" alt="Logo NaturalBlu"> 
+            <img src="../frontend/assets/images/logo.png" alt="Logo NaturalBlu"> 
         </div>
         <div class="form-box">
             <h2>Criar Conta</h2>
