--- a/frontend/header.html
+++ b/frontend/header.html
@@ -5,216 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NaturalBlu - Cabeçalho</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <style>
-    :root {
-      --primary-color: #4CAF50;
-      --secondary-color: #9caf86;
-      --accent-color: #FFC107;
-      --dark-color: #7f9481;
-      --light-color: #F1F8E9;
-      --text-color: #333;
-      --white: #fff;
-      --gray: #f5f5f5;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background-color: var(--light-color);
-      color: var(--text-color);
-      line-height: 1.6;
-    }
-
-    header {
-      background-color: var(--white);
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-
-    .top-bar {
-      background-color: var(--dark-color);
-      color: var(--white);
-      padding: 10px 0;
-      font-size: 0.9rem;
-    }
-
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    .top-bar .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .auth-buttons a {
-      color: var(--white);
-      text-decoration: none;
-      margin-left: 15px;
-      transition: opacity 0.3s;
-    }
-
-    .auth-buttons a:hover {
-      opacity: 0.8;
-    }
-
-    .main-header {
-      padding: 20px 0;
-    }
-
-    .header-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-
-    .logo img {
-      height: 50px;
-      margin-right: 10px;
-    }
-
-    .logo h1 {
-      color: var(--primary-color);
-      font-size: 1.8rem;
-      font-weight: 700;
-    }
-
-    .logo span {
-      color: var(--dark-color);
-      font-weight: 300;
-    }
-
-    .search-bar {
-      flex-grow: 1;
-      margin: 0 30px;
-      position: relative;
-    }
-
-    .search-bar input {
-      width: 100%;
-      padding: 12px 20px;
-      border: 2px solid var(--secondary-color);
-      border-radius: 30px;
-      font-size: 1rem;
-      outline: none;
-      transition: all 0.3s;
-    }
-
-    .search-bar input:focus {
-      border-color: var(--primary-color);
-      box-shadow: 0 0 10px rgba(76, 175, 80, 0.3);
-    }
-
-    .search-bar button {
-      position: absolute;
-      right: 5px;
-      top: 5px;
-      background-color: var(--primary-color);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 36px;
-      height: 36px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .search-bar button:hover {
-      background-color: var(--dark-color);
-    }
-
-    .user-actions {
-      display: flex;
-      align-items: center;
-    }
-
-    .user-actions a {
-      margin-left: 20px;
-      color: var(--text-color);
-      text-decoration: none;
-      position: relative;
-      font-size: 1.2rem;
-    }
-
-    .user-actions a span {
-      position: absolute;
-      top: -8px;
-      right: -8px;
-      background-color: var(--accent-color);
-      color: var(--text-color);
-      border-radius: 50%;
-      width: 18px;
-      height: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.7rem;
-      font-weight: bold;
-    }
-
-    nav {
-      background-color: var(--primary-color);
-    }
-
-    .nav-menu {
-      display: flex;
-      list-style: none;
-    }
-
-    .nav-menu li {
-      position: relative;
-    }
-
-    .nav-menu li:hover .submenu {
-      display: block;
-    }
-
-    .nav-menu a {
-      color: var(--white);
-      text-decoration: none;
-      padding: 15px 20px;
-      display: block;
-      transition: background-color 0.3s;
-    }
-
-    .nav-menu a:hover {
-      background-color: var(--dark-color);
-    }
-
-    .submenu {
-      display: none;
-      position: absolute;
-      background-color: var(--white);
-      min-width: 200px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-      z-index: 1;
-      list-style: none;
-    }
-
-    .submenu a {
-      color: var(--text-color);
-      padding: 12px 16px;
-    }
-
-    .submenu a:hover {
-      background-color: var(--gray);
-    }
-  </style>
+  <link rel="stylesheet" href="header.css">
 </head>
 <body>
   <header>
@@ -237,10 +28,7 @@
             <img src="assets/images/logo.png" alt="Natureza Viva">
             <h1>Natural<span>Blu</span></h1>
           </div>
-          <div class="search-bar">
-            <input type="text" placeholder="Buscar produtos...">
-            <button><i class="fas fa-search"></i></button>
-          </div>
+          <!-- Barra de pesquisa removida -->
           <div class="user-actions">
             <a href="#" id="cart-icon" class="cart-link">
               <i class="fas fa-shopping-cart"></i>
@@ -256,17 +44,6 @@
       <div class="container">
         <ul class="nav-menu">
           <li><a href="#" id="show-all-products">Home</a></li>
-          <li>
-            <a href="#">Categorias <i class="fas fa-chevron-down"></i></a>
-            <ul class="submenu">
-              <li><a href="#" class="category-filter-link" data-category="organicos">Orgânicos</a></li>
-              <li><a href="#" class="category-filter-link" data-category="veganos">Veganos</a></li>
-              <li><a href="#" class="category-filter-link" data-category="sem-gluten">Sem Glúten</a></li>
-              <li><a href="#" class="category-filter-link" data-category="suplementos">Suplementos</a></li>
-              <li><a href="#" class="category-filter-link" data-category="chas">Chás</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Promoções</a></li>
           <li><a href="mix.html">Produtos Personalizados</a></li>
           <li><a href="#">Sobre Nós</a></li>
           <li><a href="#">Contato</a></li>
