feat: adicionar lógica de carrinho com funções para adicionar, remover e renderizar itens

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="/css/carrinho.css"> <link rel="stylesheet" href="/css/homepage.css"> 
+
 </head>
 
 <body>
@@ -168,6 +170,7 @@
         <img src="assets/images/whatsapp_icon.png" alt="WhatsApp" width="60px">
     </a>
 
-    <script src="js/homepage.js"></script>
+    <script src="/js/carrinho.js"></script>
+    <script src="/js/homepage.js"></script>
 </body>
 </html>
