--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -7,7 +7,7 @@
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="/frontend/css/footer.css">
 </head>
 <body>
 
