feat: Atualiza links de finalização de compra para redirecionar para a página do carrinho

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,7 +78,7 @@
                 <strong>Total:</strong>
                 <span id="cart-total-price">R$ 0,00</span>
             </div>
-            <a href="#" class="btn btn-checkout">Finalizar Compra</a>
+            <a href="cartpage.html" class="btn btn-checkout">Finalizar Compra</a>
         </div>
     </div>
 
