--- a/frontend/mix.html
+++ b/frontend/mix.html
@@ -65,7 +65,7 @@
               <strong>Total:</strong>
               <span id="cart-total-price">R$ 0,00</span>
           </div>
-          <a href="#" class="btn btn-checkout">Finalizar Compra</a>
+          <a href="cartpage.html" class="btn btn-checkout">Finalizar Compra</a>
       </div>
   </div>
 
