refactor: organiza a ordem dos links de estilos no HTML e melhora a lógica de remoção e atualização de itens no carrinho

--- a/frontend/cartpage.html
+++ b/frontend/cartpage.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho de Compras | NaturalBlu</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/mixpage.css">   <link rel="stylesheet" href="css/carrinho.css">  <link rel="stylesheet" href="css/footer.css">   <link rel="stylesheet" href="css/cartpage.css"> </head>
+    <link rel="stylesheet" href="css/mixpage.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/cartpage.css">
+    <link rel="stylesheet" href="css/carrinho.css">
+</head>
 <body>
     <header>
       <div class="top-bar">
